--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="banner" id="banner_13"></div>
     </div>
 
-   <footer> footer</footer>
+   <footer> Diseñado por &nbsp; <a href="https://nadiaklokova.com/">creativa-nk</a></footer>
    
    <script>
    
