--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <title>Creativa con animaciones</title>
 </head>
 <body>
@@ -46,8 +47,30 @@
     <div class="container_banners pendientes4">
         <div class="banner" id="banner_13"></div>
     </div>
+    <div class="antes-footer">
+        <img src="./img/logo_fino_blanco.png" alt="">
+        <hr>
+        <div class="texto">
+            <p>Joyeria creativa hecha a mano.</p>
+            <p>Sigueme en </p>
+        </div>
+    </div>
 
-   <footer> Diseñado por &nbsp; <a href="https://nadiaklokova.com/">creativa-nk</a></footer>
+   <footer>
+        <div class="container_contact">
+            <div onclick="location.href='https://www.instagram.com/creativa.nk/?hl=es'"  class = "contact">
+                <i class="fab fa-instagram"></i>    
+            </div>
+            <div onclick="location.href='https://www.facebook.com/creativa.nk/'" class = "contact">
+                <i class="fab fa-facebook"></i>
+            </div>
+            <div onclick="location.href='https://www.artesanum.com/store/creativa-nk'" class = "contact">
+                <i class="fas fa-shopping-bag"></i>
+            </div>
+        </div> 
+        
+       <div> Diseñado por &nbsp; <a href="https://nadiaklokova.com/">creativa-nk</a></div>
+</footer>
    
    <script>
    
