aantes del footer

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         <img src="./img/logo_fino_blanco.png" alt="">
         <hr>
         <div class="texto">
-            <p>Joyeria creativa hecha a mano.</p>
-            <p>Sigueme en </p>
+            <p>Joyeria original hecha a mano.</p>
+            <p>Sigueme en : </p>
         </div>
     </div>
 
