animaciones letras inicio

--- a/index.html
+++ b/index.html
@@ -16,7 +16,31 @@
    </div>
 
     <section class="one">
-        <div class="scroll" data-rate='.5' data-direction="vertical"></div>
+        <!-- <div class="scroll" data-rate='.5' data-direction="vertical"></div> -->
+        <div class="scroll box" data-rate='.5' data-direction="vertical">
+            <img src="./img/letraC.png" alt="">
+        </div>
+        <div class="scroll box" data-rate='.5' data-direction="vertical">
+            <img src="./img/letraR.png" alt="">
+        </div>
+        <div class="scroll box" data-rate='.5' data-direction="vertical">
+            <img src="./img/letraE.png" alt="">
+        </div>
+        <div class="scroll box" data-rate='.5' data-direction="vertical">
+            <img src="./img/letraA.png" alt="">
+        </div>
+        <div class="scroll box" data-rate='.5' data-direction="vertical">
+            <img src="./img/letraT.png" alt="">
+        </div>
+        <div class="scroll box" data-rate='.5' data-direction="vertical">
+            <img src="./img/letraI.png" alt="">
+        </div>
+        <div class="scroll box" data-rate='.5' data-direction="vertical">
+            <img src="./img/letraV.png" alt="">
+        </div>
+        <div class="scroll box" data-rate='.5' data-direction="vertical">
+            <img src="./img/letraA.png" alt="">
+        </div>
     </section>
     <div class="container_banners pinzas">
         <div class="banner" id="banner_1"></div>
