--- a/index.html
+++ b/index.html
@@ -28,28 +28,28 @@
             <section class="one">
                 <!-- <div class="scroll" data-rate='.5' data-direction="vertical"></div> -->
                 <div class="scroll box" data-rate='.5' data-direction="vertical">
-                    <img src="./img/letraC.png" alt="">
+                    <img  style="--i:1" src="./img/letraC.png" alt="">
                 </div>
                 <div class="scroll box" data-rate='.5' data-direction="vertical">
-                    <img src="./img/letraR.png" alt="">
+                    <img  style="--i:2" src="./img/letraR.png" alt="">
                 </div>
                 <div class="scroll box" data-rate='.5' data-direction="vertical">
-                    <img src="./img/letraE.png" alt="">
+                    <img  style="--i:3" src="./img/letraE.png" alt="">
                 </div>
                 <div class="scroll box" data-rate='.5' data-direction="vertical">
-                    <img src="./img/letraA.png" alt="">
+                    <img  style="--i:4" src="./img/letraA.png" alt="">
                 </div>
                 <div class="scroll box" data-rate='.5' data-direction="vertical">
-                    <img src="./img/letraT.png" alt="">
+                    <img  style="--i:5" src="./img/letraT.png" alt="">
                 </div>
                 <div class="scroll box" data-rate='.5' data-direction="vertical">
-                    <img src="./img/letraI.png" alt="">
+                    <img  style="--i:6" src="./img/letraI.png" alt="">
                 </div>
                 <div class="scroll box" data-rate='.5' data-direction="vertical">
-                    <img src="./img/letraV.png" alt="">
+                    <img  style="--i:7" src="./img/letraV.png" alt="">
                 </div>
                 <div class="scroll box" data-rate='.5' data-direction="vertical">
-                    <img src="./img/letraA.png" alt="">
+                    <img  style="--i:8" src="./img/letraA.png" alt="">
                 </div>
             </section>
             <div class="container_banners pinzas">
